added desktop version

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SixThirtyThreeTech</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h2>Welcome To The Start Of Great Things</h2>
+    <div class="vertical-line"></div>
+    <div class="horizontal-line"></div>
+    <div class="horizontal-line-2"></div>
+    <div class="vertical-line-2"></div>
+    <main>
+        <div class="main-content">
+            <div class="logo-container">
+                <span>633 Technologies</span>
+            </div>
+            <div class="main-text">
+                <div>
+                    <h1>Powering Global Real Estate Investment and Ownership in Africa</h1>
+                    <p>Opening Africa's opportunities to a connected world</p>
+                </div>
+            </div>
+        </div>
+        <div class="aside">
+            <div class="link-container">
+                <a href="https://www.linkedin.com/company/sixthirtythreetechnologies/jobs/" target="_blank">Careers</a>
+                <a href="mailto:hello@sixthirtythreetech.com">Contact us</a>
+            </div>
+            <div class="img-container">
+                <img src="squares.svg" alt="slanting squares">
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
